parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> operaction_declaration
Rule 6     declaration -> fun_declaration
Rule 7     declaration -> header_declaration
Rule 8     declaration -> class_declaration
Rule 9     class_declaration -> CLASS IDENTIFICADOR bloque_declaration
Rule 10    bloque_declaration -> LLAVEIZQ bloque_declaration_2 LLAVEDER
Rule 11    bloque_declaration -> CLASS IDENTIFICADOR EXTENDS IDENTIFICADOR bloque_declaration
Rule 12    bloque_declaration_2 -> fun_declaration bloque_declaration_2
Rule 13    bloque_declaration_2 -> fun_declaration
Rule 14    header_declaration -> INICIO program FIN
Rule 15    var_declaration -> type_specifier var_declaration2 PUNTOYCOMA
Rule 16    var_declaration -> type_specifier DOLAR IDENTIFICADOR CORCHIZQ CORCHDER PUNTOYCOMA
Rule 17    var_declaration2 -> DOLAR IDENTIFICADOR COMA var_declaration2
Rule 18    var_declaration2 -> DOLAR IDENTIFICADOR
Rule 19    var_declaration2 -> DOLAR IDENTIFICADOR IGUAL NUMERO COMA var_declaration2
Rule 20    var_declaration2 -> DOLAR IDENTIFICADOR IGUAL NUMERO
Rule 21    var_declaration2 -> AMPERSAND IDENTIFICADOR
Rule 22    var_declaration2 -> DOLAR IDENTIFICADOR IGUAL NULL
Rule 23    var_declaration2 -> CONST IDENTIFICADOR IGUAL NUMERO
Rule 24    type_specifier -> PUBLIC
Rule 25    type_specifier -> PRIVATE
Rule 26    operaction_declaration -> statement
Rule 27    fun_declaration -> type_specifier type_function FUNCTION IDENTIFICADOR PARENIZQUIERDA params PARENDERECHA compount_stmt
Rule 28    fun_declaration -> type_specifier type_function FUNCTION AMPERSAND IDENTIFICADOR PARENIZQUIERDA params PARENDERECHA compount_stmt
Rule 29    type_function -> STATIC
Rule 30    type_function -> empty
Rule 31    params -> param_list
Rule 32    param_list -> param_list COMA param
Rule 33    param_list -> param
Rule 34    param_list -> empty
Rule 35    param -> DOLAR IDENTIFICADOR
Rule 36    compount_stmt -> LLAVEIZQ local_declarations statement_list LLAVEDER
Rule 37    compount_stmt -> LLAVEIZQ local_declarations statement_list LLAVEDER WHILE PARENIZQUIERDA expression PARENDERECHA PUNTOYCOMA
Rule 38    local_declarations -> local_declarations var_declaration
Rule 39    local_declarations -> empty
Rule 40    statement_list -> statement_list statement
Rule 41    statement_list -> empty
Rule 42    statement -> expression_stmt
Rule 43    statement -> imprimir_pantalla
Rule 44    statement -> compount_stmt
Rule 45    statement -> selection_stmt
Rule 46    statement -> iteration_stmt
Rule 47    statement -> return_stmt
Rule 48    statement -> continue_stmt
Rule 49    statement -> object_stmt
Rule 50    expression_stmt -> expression PUNTOYCOMA
Rule 51    expression_stmt -> PUNTOYCOMA
Rule 52    selection_stmt -> IF PARENIZQUIERDA expression PARENDERECHA statement
Rule 53    selection_stmt -> IF PARENIZQUIERDA expression PARENDERECHA statement ELSE statement
Rule 54    selection_stmt -> SWITCH PARENIZQUIERDA var_declaration2 PARENDERECHA statement
Rule 55    selection_stmt -> CASE NUMERO DOSPUNTOS statement BREAK PUNTOYCOMA
Rule 56    selection_stmt -> DEFAULT DOSPUNTOS statement BREAK PUNTOYCOMA
Rule 57    iteration_stmt -> WHILE PARENIZQUIERDA expression PARENDERECHA statement
Rule 58    iteration_stmt -> FOR PARENIZQUIERDA var_declaration2 PUNTOYCOMA expression PUNTOYCOMA additive_expression PARENDERECHA statement
Rule 59    iteration_stmt -> DO statement
Rule 60    return_stmt -> RETURN PUNTOYCOMA
Rule 61    return_stmt -> RETURN expression PUNTOYCOMA
Rule 62    continue_stmt -> CONTINUE PUNTOYCOMA
Rule 63    object_stmt -> NEW DOLAR IDENTIFICADOR IGUAL IDENTIFICADOR argumento
Rule 64    argumento -> PARENIZQUIERDA argumento_2 PARENDERECHA PUNTOYCOMA
Rule 65    argumento_2 -> DOLAR IDENTIFICADOR COMA argumento_2
Rule 66    argumento_2 -> COMILLA IDENTIFICADOR COMILLA COMA argumento_2
Rule 67    argumento_2 -> COMILLA IDENTIFICADOR COMILLA
Rule 68    argumento_2 -> DOLAR IDENTIFICADOR
Rule 69    argumento_2 -> NUMERO argumento_2
Rule 70    argumento_2 -> NUMERO
Rule 71    imprimir_pantalla -> PRINT COMILLA CADENA COMILLA PUNTOYCOMA
Rule 72    imprimir_pantalla -> PRINT COMILLA CADENA COMILLA PUNTO expression PUNTOYCOMA
Rule 73    imprimir_pantalla -> PRINT COMILLA CADENA COMILLA PUNTO expression PUNTO COMILLA CADENA COMILLA PUNTOYCOMA
Rule 74    CADENA -> IDENTIFICADOR CADENA
Rule 75    CADENA -> NUMERO CADENA
Rule 76    CADENA -> NUMERO
Rule 77    CADENA -> IDENTIFICADOR
Rule 78    expression -> var_declaration2 IGUAL expression
Rule 79    expression -> simple_expression
Rule 80    expression -> var_declaration2 IGUAL var_declaration2 PUNTOYCOMA
Rule 81    simple_expression -> additive_expression relop additive_expression
Rule 82    simple_expression -> additive_expression relop additive_expression relop additive_expression
Rule 83    simple_expression -> additive_expression relop additive_expression relop additive_expression relop additive_expression
Rule 84    simple_expression -> additive_expression relop additive_expression relop additive_expression relop additive_expression relop additive_expression
Rule 85    simple_expression -> additive_expression
Rule 86    relop -> MENORQ
Rule 87    relop -> MAYORQ
Rule 88    relop -> DIFERENTE
Rule 89    relop -> LOGNEGACION
Rule 90    relop -> IQUALIQUAL
Rule 91    relop -> LOGOR
Rule 92    relop -> LOGXOR
Rule 93    relop -> LOGAND
Rule 94    relop -> LOGY
Rule 95    additive_expression -> additive_expression addop term
Rule 96    additive_expression -> term
Rule 97    additive_expression -> term MINUSMINUS
Rule 98    additive_expression -> term PLUSPLUS
Rule 99    addop -> PLUS
Rule 100   addop -> MINUS
Rule 101   term -> term mulop factor
Rule 102   term -> factor
Rule 103   mulop -> MULTI
Rule 104   mulop -> DIVIDE
Rule 105   factor -> PARENIZQUIERDA expression PARENDERECHA
Rule 106   factor -> var_declaration2
Rule 107   factor -> call
Rule 108   factor -> NUMERO
Rule 109   call -> DOLAR IDENTIFICADOR PARENIZQUIERDA args PARENDERECHA
Rule 110   args -> args_list
Rule 111   args -> empty
Rule 112   args_list -> args_list COMA expression
Rule 113   args_list -> expression
Rule 114   empty -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 21 28
BREAK                : 55 56
CASE                 : 55
CLASS                : 9 11
COMA                 : 17 19 32 65 66 112
COMILLA              : 66 66 67 67 71 71 72 72 73 73 73 73
CONST                : 23
CONTINUE             : 62
CORCHDER             : 16
CORCHIZQ             : 16
DEFAULT              : 56
DIFERENTE            : 88
DIVIDE               : 104
DO                   : 59
DOLAR                : 16 17 18 19 20 22 35 63 65 68 109
DOSPUNTOS            : 55 56
ELSE                 : 53
EXTENDS              : 11
FIN                  : 14
FOR                  : 58
FUNCTION             : 27 28
IDENTIFICADOR        : 9 11 11 16 17 18 19 20 21 22 23 27 28 35 63 63 65 66 67 68 74 77 109
IF                   : 52 53
IGUAL                : 19 20 22 23 63 78 80
INICIO               : 14
IQUALIQUAL           : 90
LLAVEDER             : 10 36 37
LLAVEIZQ             : 10 36 37
LOGAND               : 93
LOGNEGACION          : 89
LOGOR                : 91
LOGXOR               : 92
LOGY                 : 94
MAYORQ               : 87
MENORQ               : 86
MINUS                : 100
MINUSMINUS           : 97
MULTI                : 103
NEW                  : 63
NULL                 : 22
NUMERO               : 19 20 23 55 69 70 75 76 108
PARENDERECHA         : 27 28 37 52 53 54 57 58 64 105 109
PARENIZQUIERDA       : 27 28 37 52 53 54 57 58 64 105 109
PLUS                 : 99
PLUSPLUS             : 98
PRINT                : 71 72 73
PRIVATE              : 25
PUBLIC               : 24
PUNTO                : 72 73 73
PUNTOYCOMA           : 15 16 37 50 51 55 56 58 58 60 61 62 64 71 72 73 80
RETURN               : 60 61
STATIC               : 29
SWITCH               : 54
WHILE                : 37 57
error                : 

Nonterminals, with rules where they appear

CADENA               : 71 72 73 73 74 75
additive_expression  : 58 81 81 82 82 82 83 83 83 83 84 84 84 84 84 85 95
addop                : 95
args                 : 109
args_list            : 110 112
argumento            : 63
argumento_2          : 64 65 66 69
bloque_declaration   : 9 11
bloque_declaration_2 : 10 12
call                 : 107
class_declaration    : 8
compount_stmt        : 27 28 44
continue_stmt        : 48
declaration          : 2 3
declaration_list     : 1 2
empty                : 30 34 39 41 111
expression           : 37 50 52 53 57 58 61 72 73 78 105 112 113
expression_stmt      : 42
factor               : 101 102
fun_declaration      : 6 12 13
header_declaration   : 7
imprimir_pantalla    : 43
iteration_stmt       : 46
local_declarations   : 36 37 38
mulop                : 101
object_stmt          : 49
operaction_declaration : 5
param                : 32 33
param_list           : 31 32
params               : 27 28
program              : 14 0
relop                : 81 82 82 83 83 83 84 84 84 84
return_stmt          : 47
selection_stmt       : 45
simple_expression    : 79
statement            : 26 40 52 53 53 54 55 56 57 58 59
statement_list       : 36 37 40
term                 : 95 96 97 98 101
type_function        : 27 28
type_specifier       : 15 16 27 28
var_declaration      : 4 38
var_declaration2     : 15 17 19 54 58 78 80 80 106

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . operaction_declaration
    (6) declaration -> . fun_declaration
    (7) declaration -> . header_declaration
    (8) declaration -> . class_declaration
    (15) var_declaration -> . type_specifier var_declaration2 PUNTOYCOMA
    (16) var_declaration -> . type_specifier DOLAR IDENTIFICADOR CORCHIZQ CORCHDER PUNTOYCOMA
    (26) operaction_declaration -> . statement
    (27) fun_declaration -> . type_specifier type_function FUNCTION IDENTIFICADOR PARENIZQUIERDA params PARENDERECHA compount_stmt
    (28) fun_declaration -> . type_specifier type_function FUNCTION AMPERSAND IDENTIFICADOR PARENIZQUIERDA params PARENDERECHA compount_stmt
    (14) header_declaration -> . INICIO program FIN
    (9) class_declaration -> . CLASS IDENTIFICADOR bloque_declaration
    (24) type_specifier -> . PUBLIC
    (25) type_specifier -> . PRIVATE
    (42) statement -> . expression_stmt
    (43) statement -> . imprimir_pantalla
    (44) statement -> . compount_stmt
    (45) statement -> . selection_stmt
    (46) statement -> . iteration_stmt
    (47) statement -> . return_stmt
    (48) statement -> . continue_stmt
    (49) statement -> . object_stmt
    (50) expression_stmt -> . expression PUNTOYCOMA
    (51) expression_stmt -> . PUNTOYCOMA
    (71) imprimir_pantalla -> . PRINT COMILLA CADENA COMILLA PUNTOYCOMA
    (72) imprimir_pantalla -> . PRINT COMILLA CADENA COMILLA PUNTO expression PUNTOYCOMA
    (73) imprimir_pantalla -> . PRINT COMILLA CADENA COMILLA PUNTO expression PUNTO COMILLA CADENA COMILLA PUNTOYCOMA
    (36) compount_stmt -> . LLAVEIZQ local_declarations statement_list LLAVEDER
    (37) compount_stmt -> . LLAVEIZQ local_declarations statement_list LLAVEDER WHILE PARENIZQUIERDA expression PARENDERECHA PUNTOYCOMA
    (52) selection_stmt -> . IF PARENIZQUIERDA expression PARENDERECHA statement
    (53) selection_stmt -> . IF PARENIZQUIERDA expression PARENDERECHA statement ELSE statement
    (54) selection_stmt -> . SWITCH PARENIZQUIERDA var_declaration2 PARENDERECHA statement
    (55) selection_stmt -> . CASE NUMERO DOSPUNTOS statement BREAK PUNTOYCOMA
    (56) selection_stmt -> . DEFAULT DOSPUNTOS statement BREAK PUNTOYCOMA
    (57) iteration_stmt -> . WHILE PARENIZQUIERDA expression PARENDERECHA statement
    (58) iteration_stmt -> . FOR PARENIZQUIERDA var_declaration2 PUNTOYCOMA expression PUNTOYCOMA additive_expression PARENDERECHA statement
    (59) iteration_stmt -> . DO statement
    (60) return_stmt -> . RETURN PUNTOYCOMA
    (61) return_stmt -> . RETURN expression PUNTOYCOMA
    (62) continue_stmt -> . CONTINUE PUNTOYCOMA
    (63) object_stmt -> . NEW DOLAR IDENTIFICADOR IGUAL IDENTIFICADOR argumento
    (78) expression -> . var_declaration2 IGUAL expression
    (79) expression -> . simple_expression
    (80) expression -> . var_declaration2 IGUAL var_declaration2 PUNTOYCOMA
    (17) var_declaration2 -> . DOLAR IDENTIFICADOR COMA var_declaration2
    (18) var_declaration2 -> . DOLAR IDENTIFICADOR
    (19) var_declaration2 -> . DOLAR IDENTIFICADOR IGUAL NUMERO COMA var_declaration2
    (20) var_declaration2 -> . DOLAR IDENTIFICADOR IGUAL NUMERO
    (21) var_declaration2 -> . AMPERSAND IDENTIFICADOR
    (22) var_declaration2 -> . DOLAR IDENTIFICADOR IGUAL NULL
    (23) var_declaration2 -> . CONST IDENTIFICADOR IGUAL NUMERO
    (81) simple_expression -> . additive_expression relop additive_expression
    (82) simple_expression -> . additive_expression relop additive_expression relop additive_expression
    (83) simple_expression -> . additive_expression relop additive_expression relop additive_expression relop additive_expression
    (84) simple_expression -> . additive_expression relop additive_expression relop additive_expression relop additive_expression relop additive_expression
    (85) simple_expression -> . additive_expression
    (95) additive_expression -> . additive_expression addop term
    (96) additive_expression -> . term
    (97) additive_expression -> . term MINUSMINUS
    (98) additive_expression -> . term PLUSPLUS
    (101) term -> . term mulop factor
    (102) term -> . factor
    (105) factor -> . PARENIZQUIERDA expression PARENDERECHA
    (106) factor -> . var_declaration2
    (107) factor -> . call
    (108) factor -> . NUMERO
    (109) call -> . DOLAR IDENTIFICADOR PARENIZQUIERDA args PARENDERECHA

    INICIO          shift and go to state 17
    CLASS           shift and go to state 18
    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 20
    PUNTOYCOMA      shift and go to state 11
    PRINT           shift and go to state 29
    LLAVEIZQ        shift and go to state 30
    IF              shift and go to state 32
    SWITCH          shift and go to state 33
    CASE            shift and go to state 34
    DEFAULT         shift and go to state 36
    WHILE           shift and go to state 31
    FOR             shift and go to state 37
    DO              shift and go to state 39
    RETURN          shift and go to state 40
    CONTINUE        shift and go to state 41
    NEW             shift and go to state 42
    DOLAR           shift and go to state 12
    AMPERSAND       shift and go to state 16
    CONST           shift and go to state 44
    PARENIZQUIERDA  shift and go to state 14
    NUMERO          shift and go to state 35

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    operaction_declaration         shift and go to state 5
    fun_declaration                shift and go to state 6
    header_declaration             shift and go to state 7
    class_declaration              shift and go to state 8
    type_specifier                 shift and go to state 9
    var_declaration2               shift and go to state 10
    statement                      shift and go to state 13
    compount_stmt                  shift and go to state 15
    expression_stmt                shift and go to state 21
    imprimir_pantalla              shift and go to state 22
    selection_stmt                 shift and go to state 23
    iteration_stmt                 shift and go to state 24
    return_stmt                    shift and go to state 25
    continue_stmt                  shift and go to state 26
    object_stmt                    shift and go to state 27
    expression                     shift and go to state 28
    additive_expression            shift and go to state 38
    simple_expression              shift and go to state 43
    term                           shift and go to state 45
    factor                         shift and go to state 46
    call                           shift and go to state 47

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . operaction_declaration
    (6) declaration -> . fun_declaration
    (7) declaration -> . header_declaration
    (8) declaration -> . class_declaration
    (15) var_declaration -> . type_specifier var_declaration2 PUNTOYCOMA
    (16) var_declaration -> . type_specifier DOLAR IDENTIFICADOR CORCHIZQ CORCHDER PUNTOYCOMA
    (26) operaction_declaration -> . statement
    (27) fun_declaration -> . type_specifier type_function FUNCTION IDENTIFICADOR PARENIZQUIERDA params PARENDERECHA compount_stmt
    (28) fun_declaration -> . type_specifier type_function FUNCTION AMPERSAND IDENTIFICADOR PARENIZQUIERDA params PARENDERECHA compount_stmt
    (14) header_declaration -> . INICIO program FIN
    (9) class_declaration -> . CLASS IDENTIFICADOR bloque_declaration
    (24) type_specifier -> . PUBLIC
    (25) type_specifier -> . PRIVATE
    (42) statement -> . expression_stmt
    (43) statement -> . imprimir_pantalla
    (44) statement -> . compount_stmt
    (45) statement -> . selection_stmt
    (46) statement -> . iteration_stmt
    (47) statement -> . return_stmt
    (48) statement -> . continue_stmt
    (49) statement -> . object_stmt
    (50) expression_stmt -> . expression PUNTOYCOMA
    (51) expression_stmt -> . PUNTOYCOMA
    (71) imprimir_pantalla -> . PRINT COMILLA CADENA COMILLA PUNTOYCOMA
    (72) imprimir_pantalla -> . PRINT COMILLA CADENA COMILLA PUNTO expression PUNTOYCOMA
    (73) imprimir_pantalla -> . PRINT COMILLA CADENA COMILLA PUNTO expression PUNTO COMILLA CADENA COMILLA PUNTOYCOMA
    (36) compount_stmt -> . LLAVEIZQ local_declarations statement_list LLAVEDER
    (37) compount_stmt -> . LLAVEIZQ local_declarations statement_list LLAVEDER WHILE PARENIZQUIERDA expression PARENDERECHA PUNTOYCOMA
    (52) selection_stmt -> . IF PARENIZQUIERDA expression PARENDERECHA statement
    (53) selection_stmt -> . IF PARENIZQUIERDA expression PARENDERECHA statement ELSE statement
    (54) selection_stmt -> . SWITCH PARENIZQUIERDA var_declaration2 PARENDERECHA statement
    (55) selection_stmt -> . CASE NUMERO DOSPUNTOS statement BREAK PUNTOYCOMA
    (56) selection_stmt -> . DEFAULT DOSPUNTOS statement BREAK PUNTOYCOMA
    (57) iteration_stmt -> . WHILE PARENIZQUIERDA expression PARENDERECHA statement
    (58) iteration_stmt -> . FOR PARENIZQUIERDA var_declaration2 PUNTOYCOMA expression PUNTOYCOMA additive_expression PARENDERECHA statement
    (59) iteration_stmt -> . DO statement
    (60) return_stmt -> . RETURN PUNTOYCOMA
    (61) return_stmt -> . RETURN expression PUNTOYCOMA
    (62) continue_stmt -> . CONTINUE PUNTOYCOMA
    (63) object_stmt -> . NEW DOLAR IDENTIFICADOR IGUAL IDENTIFICADOR argumento
    (78) expression -> . var_declaration2 IGUAL expression
    (79) expression -> . simple_expression
    (80) expression -> . var_declaration2 IGUAL var_declaration2 PUNTOYCOMA
    (17) var_declaration2 -> . DOLAR IDENTIFICADOR COMA var_declaration2
    (18) var_declaration2 -> . DOLAR IDENTIFICADOR
    (19) var_declaration2 -> . DOLAR IDENTIFICADOR IGUAL NUMERO COMA var_declaration2
    (20) var_declaration2 -> . DOLAR IDENTIFICADOR IGUAL NUMERO
    (21) var_declaration2 -> . AMPERSAND IDENTIFICADOR
    (22) var_declaration2 -> . DOLAR IDENTIFICADOR IGUAL NULL
    (23) var_declaration2 -> . CONST IDENTIFICADOR IGUAL NUMERO
    (81) simple_expression -> . additive_expression relop additive_expression
    (82) simple_expression -> . additive_expression relop additive_expression relop additive_expression
    (83) simple_expression -> . additive_expression relop additive_expression relop additive_expression relop additive_expression
    (84) simple_expression -> . additive_expression relop additive_expression relop additive_expression relop additive_expression relop additive_expression
    (85) simple_expression -> . additive_expression
    (95) additive_expression -> . additive_expression addop term
    (96) additive_expression -> . term
    (97) additive_expression -> . term MINUSMINUS
    (98) additive_expression -> . term PLUSPLUS
    (101) term -> . term mulop factor
    (102) term -> . factor
    (105) factor -> . PARENIZQUIERDA expression PARENDERECHA
    (106) factor -> . var_declaration2
    (107) factor -> . call
    (108) factor -> . NUMERO
    (109) call -> . DOLAR IDENTIFICADOR PARENIZQUIERDA args PARENDERECHA

    $end            reduce using rule 1 (program -> declaration_list .)
    FIN             reduce using rule 1 (program -> declaration_list .)
    INICIO          shift and go to state 17
    CLASS           shift and go to state 18
    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 20
    PUNTOYCOMA      shift and go to state 11
    PRINT           shift and go to state 29
    LLAVEIZQ        shift and go to state 30
    IF              shift and go to state 32
    SWITCH          shift and go to state 33
    CASE            shift and go to state 34
    DEFAULT         shift and go to state 36
    WHILE           shift and go to state 31
    FOR             shift and go to state 37
    DO              shift and go to state 39
    RETURN          shift and go to state 40
    CONTINUE        shift and go to state 41
    NEW             shift and go to state 42
    DOLAR           shift and go to state 12
    AMPERSAND       shift and go to state 16
    CONST           shift and go to state 44
    PARENIZQUIERDA  shift and go to state 14
    NUMERO          shift and go to state 35

    declaration                    shift and go to state 48
    var_declaration                shift and go to state 4
    operaction_declaration         shift and go to state 5
    fun_declaration                shift and go to state 6
    header_declaration             shift and go to state 7
    class_declaration              shift and go to state 8
    type_specifier                 shift and go to state 9
    var_declaration2               shift and go to state 10
    statement                      shift and go to state 13
    compount_stmt                  shift and go to state 15
    expression_stmt                shift and go to state 21
    imprimir_pantalla              shift and go to state 22
    selection_stmt                 shift and go to state 23
    iteration_stmt                 shift and go to state 24
    return_stmt                    shift and go to state 25
    continue_stmt                  shift and go to state 26
    object_stmt                    shift and go to state 27
    expression                     shift and go to state 28
    additive_expression            shift and go to state 38
    simple_expression              shift and go to state 43
    term                           shift and go to state 45
    factor                         shift and go to state 46
    call                           shift and go to state 47

state 3

    (3) declaration_list -> declaration .

    INICIO          reduce using rule 3 (declaration_list -> declaration .)
    CLASS           reduce using rule 3 (declaration_list -> declaration .)
    PUBLIC          reduce using rule 3 (declaration_list -> declaration .)
    PRIVATE         reduce using rule 3 (declaration_list -> declaration .)
    PUNTOYCOMA      reduce using rule 3 (declaration_list -> declaration .)
    PRINT           reduce using rule 3 (declaration_list -> declaration .)
    LLAVEIZQ        reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    SWITCH          reduce using rule 3 (declaration_list -> declaration .)
    CASE            reduce using rule 3 (declaration_list -> declaration .)
    DEFAULT         reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    DO              reduce using rule 3 (declaration_list -> declaration .)
    RETURN          reduce using rule 3 (declaration_list -> declaration .)
    CONTINUE        reduce using rule 3 (declaration_list -> declaration .)
    NEW             reduce using rule 3 (declaration_list -> declaration .)
    DOLAR           reduce using rule 3 (declaration_list -> declaration .)
    AMPERSAND       reduce using rule 3 (declaration_list -> declaration .)
    CONST           reduce using rule 3 (declaration_list -> declaration .)
    PARENIZQUIERDA  reduce using rule 3 (declaration_list -> declaration .)
    NUMERO          reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)
    FIN             reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INICIO          reduce using rule 4 (declaration -> var_declaration .)
    CLASS           reduce using rule 4 (declaration -> var_declaration .)
    PUBLIC          reduce using rule 4 (declaration -> var_declaration .)
    PRIVATE         reduce using rule 4 (declaration -> var_declaration .)
    PUNTOYCOMA      reduce using rule 4 (declaration -> var_declaration .)
    PRINT           reduce using rule 4 (declaration -> var_declaration .)
    LLAVEIZQ        reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    SWITCH          reduce using rule 4 (declaration -> var_declaration .)
    CASE            reduce using rule 4 (declaration -> var_declaration .)
    DEFAULT         reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    DO              reduce using rule 4 (declaration -> var_declaration .)
    RETURN          reduce using rule 4 (declaration -> var_declaration .)
    CONTINUE        reduce using rule 4 (declaration -> var_declaration .)
    NEW             reduce using rule 4 (declaration -> var_declaration .)
    DOLAR           reduce using rule 4 (declaration -> var_declaration .)
    AMPERSAND       reduce using rule 4 (declaration -> var_declaration .)
    CONST           reduce using rule 4 (declaration -> var_declaration .)
    PARENIZQUIERDA  reduce using rule 4 (declaration -> var_declaration .)
    NUMERO          reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)
    FIN             reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> operaction_declaration .

    INICIO          reduce using rule 5 (declaration -> operaction_declaration .)
    CLASS           reduce using rule 5 (declaration -> operaction_declaration .)
    PUBLIC          reduce using rule 5 (declaration -> operaction_declaration .)
    PRIVATE         reduce using rule 5 (declaration -> operaction_declaration .)
    PUNTOYCOMA      reduce using rule 5 (declaration -> operaction_declaration .)
    PRINT           reduce using rule 5 (declaration -> operaction_declaration .)
    LLAVEIZQ        reduce using rule 5 (declaration -> operaction_declaration .)
    IF              reduce using rule 5 (declaration -> operaction_declaration .)
    SWITCH          reduce using rule 5 (declaration -> operaction_declaration .)
    CASE            reduce using rule 5 (declaration -> operaction_declaration .)
    DEFAULT         reduce using rule 5 (declaration -> operaction_declaration .)
    WHILE           reduce using rule 5 (declaration -> operaction_declaration .)
    FOR             reduce using rule 5 (declaration -> operaction_declaration .)
    DO              reduce using rule 5 (declaration -> operaction_declaration .)
    RETURN          reduce using rule 5 (declaration -> operaction_declaration .)
    CONTINUE        reduce using rule 5 (declaration -> operaction_declaration .)
    NEW             reduce using rule 5 (declaration -> operaction_declaration .)
    DOLAR           reduce using rule 5 (declaration -> operaction_declaration .)
    AMPERSAND       reduce using rule 5 (declaration -> operaction_declaration .)
    CONST           reduce using rule 5 (declaration -> operaction_declaration .)
    PARENIZQUIERDA  reduce using rule 5 (declaration -> operaction_declaration .)
    NUMERO          reduce using rule 5 (declaration -> operaction_declaration .)
    $end            reduce using rule 5 (declaration -> operaction_declaration .)
    FIN             reduce using rule 5 (declaration -> operaction_declaration .)


state 6

    (6) declaration -> fun_declaration .

    INICIO          reduce using rule 6 (declaration -> fun_declaration .)
    CLASS           reduce using rule 6 (declaration -> fun_declaration .)
    PUBLIC          reduce using rule 6 (declaration -> fun_declaration .)
    PRIVATE         reduce using rule 6 (declaration -> fun_declaration .)
    PUNTOYCOMA      reduce using rule 6 (declaration -> fun_declaration .)
    PRINT           reduce using rule 6 (declaration -> fun_declaration .)
    LLAVEIZQ        reduce using rule 6 (declaration -> fun_declaration .)
    IF              reduce using rule 6 (declaration -> fun_declaration .)
    SWITCH          reduce using rule 6 (declaration -> fun_declaration .)
    CASE            reduce using rule 6 (declaration -> fun_declaration .)
    DEFAULT         reduce using rule 6 (declaration -> fun_declaration .)
    WHILE           reduce using rule 6 (declaration -> fun_declaration .)
    FOR             reduce using rule 6 (declaration -> fun_declaration .)
    DO              reduce using rule 6 (declaration -> fun_declaration .)
    RETURN          reduce using rule 6 (declaration -> fun_declaration .)
    CONTINUE        reduce using rule 6 (declaration -> fun_declaration .)
    NEW             reduce using rule 6 (declaration -> fun_declaration .)
    DOLAR           reduce using rule 6 (declaration -> fun_declaration .)
    AMPERSAND       reduce using rule 6 (declaration -> fun_declaration .)
    CONST           reduce using rule 6 (declaration -> fun_declaration .)
    PARENIZQUIERDA  reduce using rule 6 (declaration -> fun_declaration .)
    NUMERO          reduce using rule 6 (declaration -> fun_declaration .)
    $end            reduce using rule 6 (declaration -> fun_declaration .)
    FIN             reduce using rule 6 (declaration -> fun_declaration .)


state 7

    (7) declaration -> header_declaration .

    INICIO          reduce using rule 7 (declaration -> header_declaration .)
    CLASS           reduce using rule 7 (declaration -> header_declaration .)
    PUBLIC          reduce using rule 7 (declaration -> header_declaration .)
    PRIVATE         reduce using rule 7 (declaration -> header_declaration .)
    PUNTOYCOMA      reduce using rule 7 (declaration -> header_declaration .)
    PRINT           reduce using rule 7 (declaration -> header_declaration .)
    LLAVEIZQ        reduce using rule 7 (declaration -> header_declaration .)
    IF              reduce using rule 7 (declaration -> header_declaration .)
    SWITCH          reduce using rule 7 (declaration -> header_declaration .)
    CASE            reduce using rule 7 (declaration -> header_declaration .)
    DEFAULT         reduce using rule 7 (declaration -> header_declaration .)
    WHILE           reduce using rule 7 (declaration -> header_declaration .)
    FOR             reduce using rule 7 (declaration -> header_declaration .)
    DO              reduce using rule 7 (declaration -> header_declaration .)
    RETURN          reduce using rule 7 (declaration -> header_declaration .)
    CONTINUE        reduce using rule 7 (declaration -> header_declaration .)
    NEW             reduce using rule 7 (declaration -> header_declaration .)
    DOLAR           reduce using rule 7 (declaration -> header_declaration .)
    AMPERSAND       reduce using rule 7 (declaration -> header_declaration .)
    CONST           reduce using rule 7 (declaration -> header_declaration .)
    PARENIZQUIERDA  reduce using rule 7 (declaration -> header_declaration .)
    NUMERO          reduce using rule 7 (declaration -> header_declaration .)
    $end            reduce using rule 7 (declaration -> header_declaration .)
    FIN             reduce using rule 7 (declaration -> header_declaration .)


state 8

    (8) declaration -> class_declaration .

    INICIO          reduce using rule 8 (declaration -> class_declaration .)
    CLASS           reduce using rule 8 (declaration -> class_declaration .)
    PUBLIC          reduce using rule 8 (declaration -> class_declaration .)
    PRIVATE         reduce using rule 8 (declaration -> class_declaration .)
    PUNTOYCOMA      reduce using rule 8 (declaration -> class_declaration .)
    PRINT           reduce using rule 8 (declaration -> class_declaration .)
    LLAVEIZQ        reduce using rule 8 (declaration -> class_declaration .)
    IF              reduce using rule 8 (declaration -> class_declaration .)
    SWITCH          reduce using rule 8 (declaration -> class_declaration .)
    CASE            reduce using rule 8 (declaration -> class_declaration .)
    DEFAULT         reduce using rule 8 (declaration -> class_declaration .)
